added shape comments, rogue and bleu scores fixed GPU bug

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,2 @@
 - change lemma_caption to lemma
-- move out dataloader from the ICG class and make it separtate (refactoring)
-- device to GPU 
-- when training looks good, implement saving model
+- fix predict function
